@@ -1,11 +1,12 @@
 package org.tb.action.order;
 
+import static org.tb.util.DateUtils.addDays;
 import static org.tb.util.DateUtils.parse;
+import static org.tb.util.DateUtils.today;
 
 import java.text.DecimalFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.util.Calendar;
 import java.util.Date;
 import java.util.LinkedList;
 import java.util.List;
@@ -32,6 +33,7 @@ import org.tb.persistence.CustomerorderDAO;
 import org.tb.persistence.EmployeeorderDAO;
 import org.tb.persistence.SuborderDAO;
 import org.tb.persistence.TimereportDAO;
+import org.tb.util.DateUtils;
 
 /**
  * action class for storing a suborder permanently
@@ -64,27 +66,21 @@ public class StoreSuborderAction extends LoginRequiredAction<AddSuborderForm> {
             int howMuch = Integer.parseInt(request.getParameter("howMuch"));
 
             String datum = which.equals("until") ? addSuborderForm.getValidUntil() : addSuborderForm.getValidFrom();
-            int day, month, year;
-            Calendar cal = Calendar.getInstance();
 
+            Date newValue;
             if (howMuch != 0) {
                 ActionMessages errorMessages = valiDate(request, addSuborderForm, which);
                 if (errorMessages.size() > 0) {
                     return mapping.getInputForward();
                 }
 
-                day = Integer.parseInt(datum.substring(8));
-                month = Integer.parseInt(datum.substring(5, 7));
-                year = Integer.parseInt(datum.substring(0, 4));
-
-                cal.set(Calendar.DATE, day);
-                cal.set(Calendar.MONTH, month - 1);
-                cal.set(Calendar.YEAR, year);
-
-                cal.add(Calendar.DATE, howMuch);
+                newValue = DateUtils.parse(datum, today());
+                newValue = addDays(newValue, 1);
+            } else {
+                newValue = today();
             }
 
-            datum = howMuch == 0 ? format.format(new java.util.Date()) : format.format(cal.getTime());
+            datum = DateUtils.format(newValue);
 
             request.getSession().setAttribute(which.equals("until") ? "validUntil" : "validFrom", datum);
 
@@ -148,7 +144,7 @@ public class StoreSuborderAction extends LoginRequiredAction<AddSuborderForm> {
             LOG.debug("StoreSuborderAction.executeAuthenticated() - three Values: " + tempSubOrder + " / " + tempOrder + " / " + suborders);
             Long soId;
             try {
-                soId = new Long(request.getSession().getAttribute("soId").toString());
+                soId = Long.valueOf(request.getSession().getAttribute("soId").toString());
             } catch (Throwable th) {
                 soId = -1L;
             }
